[Tue 15 Sep] add heartbeat chart
